--- a/cssMemSlider/style.css
+++ b/cssMemSlider/style.css
@@ -56,7 +56,7 @@ body {
         display: block;
         position: static;
         width: 350px;
-        margin: 75px;
+        margin: 0 auto;
         height: 75vh;
         margin-top: 50px;
         margin-bottom: 100px;
@@ -71,4 +71,12 @@ body {
 
     }
 
+}
+
+@media (max-width: 600px) {
+
+    .img-class {
+        height: 300px;
+        width: 300px;
+    }
 }
