--- a/cssMemSlider/style.css
+++ b/cssMemSlider/style.css
@@ -20,6 +20,7 @@ body {
 
 .my-slider {
     text-align: center;
+
 }
 
 .tns-nav {
@@ -27,6 +28,7 @@ body {
     position: relative;
     left: 395px;
     max-width: 110px;
+    bottom: 22px;
 }
 
 .tns-nav button {
@@ -49,6 +51,17 @@ body {
     border: 1px solid #ffffff;
 }
 
+.text {
+    text-align: left;
+    position: relative;
+    top: 10px;
+    margin-top: 20px;
+    z-index: 99;
+}
+
+
+
+
 
 @media (max-width: 600px) {
 
@@ -68,7 +81,12 @@ body {
     .tns-nav {
         position: relative;
         left: 125px;
-
+        bottom: 60px;
+    }
+    .text {
+        top: 10px;
+        left: 25px;
+        margin-top: 50px;
     }
 
 }
