--- a/cssMemSlider/style.css
+++ b/cssMemSlider/style.css
@@ -57,6 +57,8 @@ body {
     top: 10px;
     margin-top: 20px;
     z-index: 99;
+    color: #ffffff;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
 
